blogging-application/templates/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
spec:
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
      - name: blog-app
        image: adebisibiola/bloggin:1
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blog-app-service
spec:
  selector:
    app: blog-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
