blogging-application/templates/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      # initContainers:
      # - name: clean-mysql-data
      #   image: busybox
      #   command: ['sh', '-c', 'rm -rf /var/lib/mysql/* || true']
      #   volumeMounts:
      #   - name: blog-app-sc
      #     mountPath: /var/lib/mysql
      containers:
      - name: mysql-app                   
        image: mysql:5.7
        ports:
        - containerPort: 3306         
        volumeMounts:
        - name: blog-app-s
          mountPath: /var/lib/mysql
      volumes:
        - name: blog-app-s
          persistentVolumeClaim:
             claimName: blog-app-pvc1
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-app
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  type: ClusterIP
